Improve annotation-based command definition